@@ -1,15 +1,30 @@
 #
-# For further details regarding this file, 
-# see http://www.vtk.org/Wiki/CMake_Testing_With_CTest#Customizing_CTest
+# Note that the ITK/CMakeLists.txt file configures this file
 #
+#               CMake/CTestCustom.cmake.in
+#
+# to this file
+#
+#       ${ITK_BINARY_DIR}/CTestCustom.cmake
+#
+#----------------------------------------------------------------------
+#
+# For further details regarding this file,
+# see http://www.cmake.org/Wiki/CMake_Testing_With_CTest#Customizing_CTest
+#
+# and
+# http://www.kitware.com/blog/home/post/27
+#
+#----------------------------------------------------------------------
 
 SET (CTEST_CUSTOM_MAXIMUM_NUMBER_OF_ERRORS   50)
-SET (CTEST_CUSTOM_MAXIMUM_NUMBER_OF_WARNINGS 50)
+SET (CTEST_CUSTOM_MAXIMUM_NUMBER_OF_WARNINGS 2000)
 
 SET(CTEST_CUSTOM_COVERAGE_EXCLUDE
  ${CTEST_CUSTOM_COVERAGE_EXCLUDE}
 
  # Exclude files from the Testing directories
+ ".*/tests/.*"
  ".*/Testing/.*"
  )
 
